--- a/SSA/res/values/strings.xml
+++ b/SSA/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">ActionBar</string>
+    <string name="app_name">SSA BizAppStore</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
