--- a/SSA/res/values-ko/strings.xml
+++ b/SSA/res/values-ko/strings.xml
@@ -11,4 +11,8 @@
     <string name="title_section3">업데이트</string>
     
     <string name="action_menu1">검색버튼</string>
+    <string name="download">다운로드 </string>
+    <string name="downloadMsg">이 앱을 다운로드 하시겠습니까?</string>
+    <string name="yes">예</string>
+    <string name="no">아니오</string>
 </resources>
