--- a/SSA/res/values/strings.xml
+++ b/SSA/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="downloadMsg">Do you want to download this application?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    
+    <string name="summary">Summary</string>
+    <string name="description">Description</string>
+    <string name="manual">Manual</string>
 </resources>
