compound fragment3(update) view

--- a/SSA/res/values/strings.xml
+++ b/SSA/res/values/strings.xml
@@ -11,8 +11,10 @@
     <string name="title_section3">Update</string>
     
     <string name="action_menu1">Menu #1</string>
-    <string name="download">Download </string>
+    <string name="download">Download</string>
     <string name="downloadMsg">Do you want to download this application?</string>
+    <string name="update">Update</string>
+    <string name="updatedMsg">Do you want to update this application?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
     
