add comment list view

--- a/SSA/res/values/strings.xml
+++ b/SSA/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="summary">Summary</string>
     <string name="description">Description</string>
     <string name="manual">Manual</string>
+    <string name="review">Review</string>
+    <string name="version">Version</string>
 </resources>
