--- a/SSA/res/values-ko/strings.xml
+++ b/SSA/res/values-ko/strings.xml
@@ -21,4 +21,6 @@
     <string name="summary">소개</string>
     <string name="description">상세설명</string>
     <string name="manual">사용법</string>
+    <string name="review">리뷰</string>
+    <string name="version">버전</string>
 </resources>
