--- a/SSA/res/values-ko/strings.xml
+++ b/SSA/res/values-ko/strings.xml
@@ -25,4 +25,6 @@
     <string name="version">버전</string>
     <string name="rate_app">앱 평가하기</string>
     <string name="write_review">리뷰쓰기</string>
+    <string name="cancel">취소</string>
+    <string name="confirm">확인</string>
 </resources>
