--- a/SSA/res/values-ko/strings.xml
+++ b/SSA/res/values-ko/strings.xml
@@ -27,4 +27,5 @@
     <string name="write_review">리뷰쓰기</string>
     <string name="cancel">취소</string>
     <string name="confirm">확인</string>
+    <string name="searchword">검색어</string>
 </resources>
