--- a/SSA/res/values/strings.xml
+++ b/SSA/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="write_review">Write a review</string>
     <string name="cancel">Cancel</string>
     <string name="confirm">Confirm</string>
+    <string name="searchword">Search Word</string>
 </resources>
