--- a/SSA/res/values/strings.xml
+++ b/SSA/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 
+    <string name="is_new_day">7</string>
     <string name="app_name">SSA BizAppStore</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
