--- a/SSA/res/values/strings.xml
+++ b/SSA/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
+    <!-- Navigation -->    
+    <string name="app_name">SSA BizAppStore</string>
+    <string name="search">Search</string>
+        
+    <string name="drawer_open">Open drawer navigation</string>
+    <string name="drawer_close">Navigation drawer Close</string>
+
  	<string name="server_address">https://ssa-bas-project.googlecode.com/svn/</string>
  	<string name="app_link">app</string>
  	<string name="category_link">category</string>
@@ -6,18 +13,11 @@
  	<string name="detail_link">appdetail</string>
  	<string name="search_link">search</string>
     <string name="is_new_day">7</string>
-    
-    <string name="app_name">SSA BizAppStore</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="menu_settings">Settings</string>
-    <string name="title_main">SSA BizAppStore</string>
 
     <string name="title_section1">Applications</string>
     <string name="title_section2">Categories</string>
     <string name="title_section3">Update</string>
     
-    <string name="action_menu1">Menu #1</string>
     <string name="download">Download</string>
     <string name="downloadMsg">Do you want to download this application?</string>
     <string name="update">Update</string>
@@ -34,5 +34,4 @@
     <string name="write_review">Write a review</string>
     <string name="cancel">Cancel</string>
     <string name="confirm">Confirm</string>
-    <string name="searchword">Search Word</string>
 </resources>
