--- a/SSA/res/values-ko/strings.xml
+++ b/SSA/res/values-ko/strings.xml
@@ -22,4 +22,5 @@
     <string name="write_review">리뷰쓰기</string>
     <string name="cancel">취소</string>
     <string name="confirm">확인</string>
+    <string name="myapp">나의 앱</string>
 </resources>
