--- a/SSA/res/values-ko/strings.xml
+++ b/SSA/res/values-ko/strings.xml
@@ -1,14 +1,15 @@
 <resources>
 
     <string name="app_name">SSA BizAppStore</string>
+    <string name="search">검색</string>
 
-    <string name="title_section1">애플리케이션</string>
-    <string name="title_section2">카테고리</string>
-    <string name="title_section3">업데이트</string>
+    <string name="application">애플리케이션</string>
+    <string name="category">카테고리</string>
+    <string name="update">업데이트</string>
+    <string name="all">전체</string>
     
     <string name="download">다운로드</string>
     <string name="downloadMsg">이 앱을 다운로드 하시겠습니까?</string>
-    <string name="update">업데이트</string>
     <string name="updateMsg">이 앱을 업데이트 하시겠습니까?</string>
     <string name="yes">예</string>
     <string name="no">아니오</string>
