--- a/SSA/res/values-ko/strings.xml
+++ b/SSA/res/values-ko/strings.xml
@@ -11,6 +11,7 @@
     <string name="download">다운로드</string>
     <string name="downloadMsg">이 앱을 다운로드 하시겠습니까?</string>
     <string name="updateMsg">이 앱을 업데이트 하시겠습니까?</string>
+    <string name="updateAllMsg">전부 업데이트 하시겠습니까?</string>
     <string name="yes">예</string>
     <string name="no">아니오</string>
     
