--- a/SSA/res/values-ko/strings.xml
+++ b/SSA/res/values-ko/strings.xml
@@ -27,4 +27,5 @@
     <string name="myapp">나의 앱</string>
     <string name="latestversion">최신 버전</string>
     <string name="search_result">검색 결과</string>
+    <string name="no_list">목록이 없습니다.</string>
 </resources>
