--- a/SSA/res/values-ko/strings.xml
+++ b/SSA/res/values-ko/strings.xml
@@ -28,4 +28,5 @@
     <string name="latestversion">최신 버전</string>
     <string name="search_result">검색 결과</string>
     <string name="no_list">목록이 없습니다.</string>
+    <string name="reviewWarnMsg">평점이나 리뷰를 입력하셔야 합니다. </string>
 </resources>
